package com.inf5153.api.services;

import com.inf5153.api.models.User;

import org.springframework.stereotype.Service;

@Service
public class UserService extends AbstractService<User,Integer>  {
    
}
